<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            style="@style/txt_title_base"
            android:text="@string/title_chose_date_in_week" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkbox_Monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_Monday" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkbox_Tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_Tuesday" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkbox_Wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_Wednesday" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkbox_Thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_Thursday" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkbox_Friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_Friday" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkbox_Saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_Saturday" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkbox_Sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_Sunday" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm_chose_date"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/edit_txt_corners"
        android:gravity="center"
        android:text="@string/txt_btnConfirm" />
</LinearLayout>
