<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/txt_title_base"
            android:text="@string/lb_detail_course_act"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/course_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_name_course" />

            <EditText
                android:id="@+id/et_name_course"
                style="@style/et_create_course_act" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/duration_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_name_layout">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_duration_date_course" />

            <EditText
                android:id="@+id/et_duration_date_course"
                style="@style/et_create_course_act"
                android:inputType="number"
                android:hint="@string/txt_month" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_date_layout">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_duration_course" />

            <EditText
                android:id="@+id/et_duration_course"
                style="@style/et_create_course_act"
                android:inputType="number"
                android:hint="@string/txt_times" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/duration_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_layout">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_duration_time_course" />

            <EditText
                android:id="@+id/et_duration_time_course"
                style="@style/et_create_course_act"
                android:inputType="number"
                android:hint="@string/txt_hours" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/course_trainer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_time_layout">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_course_trainer" />

            <Spinner
                android:id="@+id/spinner_course_trainer"
                style="@style/spinner_create_course_act"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_course_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_trainer_layout"
            android:weightSum="10">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_time_course"
                android:layout_weight="8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_start_time_course"
                    android:layout_height="wrap_content"
                    style="@style/et_create_course_act"
                    android:hint="@string/btn_chose_time_course" />

                <Button
                    android:id="@+id/btn_end_time_course"
                    android:layout_height="wrap_content"
                    style="@style/et_create_course_act"
                    android:hint="@string/btn_chose_time_course" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_course_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_course_layout">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_date_course" />

            <Button
                android:id="@+id/btn_date_course"
                android:layout_height="wrap_content"
                style="@style/et_create_course_act"
                android:hint="@string/btn_chose_date_course" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_date_course_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_course_layout">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_start_date_course" />

            <Button
                android:id="@+id/btn_start_date_course"
                android:layout_height="wrap_content"
                style="@style/et_create_course_act"
                android:hint="@string/btn_chose_start_date_course" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fee_course_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date_course_layout">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_fee_course" />

            <EditText
                android:id="@+id/et_fee_course"
                style="@style/et_create_course_act"
                android:inputType="number"
                android:hint="VNĐ" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/numberOf_course_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fee_course_layout">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_numberof_course" />

            <EditText
                android:id="@+id/et_numberOf_course"
                style="@style/et_create_course_act"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/status_course_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberOf_course_layout">

            <TextView
                style="@style/tv_create_course_act"
                android:text="@string/tv_status_course" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <!--            <ImageView-->
                <!--                android:id="@+id/iv_status_course"-->
                <!--                android:layout_width="40dp"-->
                <!--                android:layout_height="40dp"-->
                <!--                android:background="#f00a0a" />-->

                <!--            <TextView-->
                <!--                android:id="@+id/tv_status_course"-->
                <!--                style="@style/tv_create_course_act"-->
                <!--                android:gravity="center|left"-->
                <!--                android:hint="@string/tv_status_course"-->
                <!--                android:padding="3dp" />-->
                <Spinner
                    android:id="@+id/spinner_status_course"
                    android:layout_height="match_parent"
                    style="@style/spinner_create_course_act"
                    android:spinnerMode="dialog" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/status_course_layout">

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_btnSave"
                android:background="#24911a"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_btnBack"
                android:background="#224c85"
                android:layout_marginLeft="30dp"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
